Resuelta la estupidez de @alej008

--- a/api.yaml
+++ b/api.yaml
@@ -7,7 +7,7 @@ info:
     name: MIT License
     url: https://opensource.org/licenses/mit-license.php
 servers:
-  - url: https://unitrivia.com/beneapi
+  - url: https://unitrivia.com/api
 paths:
   /login:
     post:
