--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
     "swagger-ui-express": "^4.0.2",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "mongodb": "^3.6.5"
   },
   "devDependencies": {
     "axios": "^0.21.1",
