--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "openapi-sampler": "^1.0.0-beta.15",
     "swagger-ui-express": "^4.0.2",
     "winston": "^3.2.1",
+    "jsonwebtoken": "^8.5.1",
     "bcrypt": "^5.0.1",
     "mongodb": "^3.6.5"
   },
