--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "Unlicense",
   "private": true,
   "dependencies": {
+    "async-mutex": "^0.3.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "camelcase": "^5.3.1",
     "cookie-parser": "^1.4.4",
@@ -21,13 +23,13 @@
     "express": "^4.16.4",
     "express-openapi-validator": "^3.9.1",
     "js-yaml": "^3.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.5",
+    "node-cache": "^5.1.2",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
     "swagger-ui-express": "^4.0.2",
-    "winston": "^3.2.1",
-    "jsonwebtoken": "^8.5.1",
-    "bcrypt": "^5.0.1",
-    "mongodb": "^3.6.5"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "axios": "^0.21.1",
