--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
     "swagger-ui-express": "^4.0.2",
+    "dotenv": "^8.2.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
