--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.17.2",
+    "socket.io-client": "^4.0.1",
     "mocha": "^7.1.1"
   },
   "eslintConfig": {
