--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "openapi-sampler": "^1.0.0-beta.15",
     "swagger-ui-express": "^4.0.2",
     "dotenv": "^8.2.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "socket.io": "^4.0.1"
   },
   "devDependencies": {
     "axios": "^0.21.1",
