Test socketio actualizado para partidas también

--- a/api/asyncapi.yaml
+++ b/api/asyncapi.yaml
@@ -139,8 +139,10 @@ components:
     cambioLider:
     abandonoSala:
     comienzoPartida:
+    jugada:
     cargarJugadores:
     nuevoJugador:
+    finDelJuego:
 
     chat:
       payload:
