--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -21,3 +21,12 @@
 #docs/*.md
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
+services/PartidaService.js
+services/UsuarioService.js
+controller/PartidaController.js
+controller/UsuarioController.js
+index.js
+config.js
+expressServer.js
+package.json
+README.md
