--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "express-openapi-validator": "^3.9.1",
     "js-yaml": "^3.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.5",
+    "mongodb": "^3.6.6",
     "node-cache": "^5.1.2",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
@@ -39,8 +39,8 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.17.2",
-    "socket.io-client": "^4.0.1",
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
+    "socket.io-client": "^4.0.1"
   },
   "eslintConfig": {
     "env": {
